fixed minor spacing issue in contact us form. changed label colour.

--- a/wp-content/themes/wptheme-lfb-0.1/scss/parts/_gravity-forms.scss
+++ b/wp-content/themes/wptheme-lfb-0.1/scss/parts/_gravity-forms.scss
@@ -267,6 +267,7 @@
             display:block !important;
             padding:10px 0 0 60px ;
             @include font-size(16);
+            color:$navy;
             @media only screen and (max-width: $screenSmall - 1) {
               @include font-size(13);
               padding:15px 0 0 60px ;
